tests/snapshots/cli__snapshots@db_migrate.toml.snap
---
source: tests/cli.rs
expression: assert.get_output()
input_file: tests/cli/inputs/db_migrate.toml
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "✅ database has been migrated\n",
    stderr: "",
}
